# crypto

./: .gitignore  README  pyproject.toml  results.csv  run_all.py  run_benchmark.py  run_gbm_gru.py  run_gbm_gru_penalty.py  run_gbm_lstm.py  run_gbm_lstm_penalty.py  run_gru.py  run_lstm.py
data/: binance.csv  bitcoin.csv  dogecoin.csv  ethereum.csv  ripple.csv  solana.csv
src/: __init__.py  config.py  data.py  dataset.py  evaluate.py  loss.py  metrics.py  scaling.py  trainer.py
src/models/: __init__.py  gru.py  lstm.py  prophet_baseline.py
