[project]
name = "prediction"
version = "0.2.0"
description = "Cryptocurrency price prediction using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "torch>=2.0.0",
]

[project.scripts]
benchmark = "run_benchmark:main"
lstm = "run_lstm:main"
gbm-lstm = "run_gbm_lstm:main"
gbm-lstm-penalty = "run_gbm_lstm_penalty:main"
all = "run_all:main"
